# subtitle-player

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
subtitle_player/: __init__.py  create_desktop_shortcut.ps1  launch.bat  mockup.html  run.py
subtitle_player/backend/: __init__.py  app.py  models.py  parser.py  paths.py  translate_config.py  translator.py
subtitle_player/desktop/: loading.html  main.js  package-lock.json  package.json  preload.js
subtitle_player/docs/: API.md  API.zh-CN.md
subtitle_player/frontend/: app.js  i18n.js  index.html  style.css
subtitle_player/packaging/: backend.spec  make_icon.py
