[project]
name = "subtitle-player"
version = "0.0.1"
description = "Open-source timed subtitle viewer with karaoke highlight, bilingual EN/ZH display, and LLM translation"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "xk" }]
keywords = [
    "subtitle-player",
    "srt",
    "vtt",
    "bilingual-subtitles",
    "karaoke-lyrics",
    "funasr",
    "language-learning",
    "fastapi",
    "electron",
]
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.31",
    "openai>=1.0",
    "httpx>=0.27.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
